--- a/calendar.html
+++ b/calendar.html
@@ -4,371 +4,16 @@
     <meta charset="UTF-8">
     <title>demo</title>
 </head>
-<style>
-.strongCalendar{
-    width: 340px;
-    background: #fff;
-    position: relative;
-    padding: 4px 37px 35px 4px;
-}
-.strongCalendar .cal_head{
-    background: #f9faf7;
-    padding: 10px 10px 4px;
-    overflow: hidden;
-}
-table td{
-    width: 25px;
-    height: 43px;
-    line-height: 21px;
-    /*background: #f2f2f2;*/
-    border: 2px solid #f2f2f2;
-    text-align: center;
-    padding-left: 5px;
-}
-table td span{
-    color: #555;
-}
-table td div{
-    font-size: 13px;
-    color: #ff5500;
-}
-.arrow{display:inline-block;width: 15px;height: 21px;border: 1px solid #eaeaea;background: grey;}
-.oper_date{width: 40%;float: left;}
-.year_sub,.month_sub{float: left;}
-.year_add,.month_add{float: right;}
-.cal_center table{width: 100%;}
-</style>
+
 <body>
 <div class="main">
  	<input type="text" readonly="readonly" class="startTime"/>
-        <input type="text" readonly="readonly" class="endTimes"/>
+    <input type="text" readonly="readonly" class="endTimes"/>
 
 </div>
 </body>
 <script src="http://static.xinrenxinshi.com/plugins/jquery.min.1.11.1.js"></script>
-
-<script>
-;(function($){
-    jQuery.fn.extend({
-        showCalendar:function(options){
-        var defaultOptions = {
-                //class名称
-                className:'strongCalendar',
-                //日历格式'yyyy-MM-dd'('yyyy-MM-dd','yyyy年MM月dd日')
-                // format:'yyyy-MM-dd',
-                // //高度,默认220px
-                // height:220,
-                // //宽度:默认与文本框宽度相同
-                // width:$(this).innerWidth(),
-                // //日历框离文本框高度
-                // marginTop:1,
-                // //浮层z-index
-                // zIndex:99,
-                // //间隙距离,默认为5px
-                // spaceWidth:8,
-                // //字体大小,默认9pt
-                // fontSize:9,
-                //是否显示其他的月份
-                showOthermonth: false,
-                //操作每天的表格
-                dayInfo:{
-                        starttime: '',
-                        endtime: '',
-                        price:"316"
-                },
-                operate:function(){}
-              };
-              var settings = jQuery.extend(defaultOptions,options || {}),
-                $body = $("body"),
-                date = new Date(),
-                currentYear = date.getFullYear(),
-                currentMonth = date.getMonth(),
-                monthDay = [],
-                $calendar,
-                //触发事件对象
-                $target = $(this),
-                current ;
-                //对于小于10的数字前+0
-                Number.prototype.addZero = function(){
-                    return this<10?"0"+this:this;
-                };
-                var Calendar = {
-                    //星期列表
-                    weeks : ['日','一','二','三','四','五','六'],
-                    //每月的天数
-                    months : [31,0,31,30,31,30,31,31,30,31,30,31],
-                    //初始化日历
-                    loadCalendar:function(){
-                        $body.append("<div class="+settings.className+"></div>");
-                        $calendar = $("."+settings.className);
-                        //新增核心html
-                        $calendar.append(Calendar.innerHTML());
-
-                        //核心日历加载
-                        Calendar.loaderDate(currentYear,currentMonth);
-                        //事件绑定
-                        Calendar.dateEvent();
-                    },
-                         //日历核心HTML
-                    innerHTML:function(){
-                        var htmlContent = {};
-                        htmlContent = "<div class='cal_head'>"+ <!--头部div层start-->
-                                          "<div class='year_oper oper_date'>"+
-                                            "<div class='year_sub operb'><b class='arrow aLeft'><</b></div>"+
-                                            "<div class='year_add operb'><b class='arrow aRight'>></b></div>"+
-                                            "<span class='current_year'></span>"+
-                                            <!--位置互换下,考虑到span后面float:right会换行-->
-                                          "</div>"+
-                                          "<div class='month_oper oper_date'>"+
-                                            "<div class='month_sub operb'><b class='arrow aLeft'><</b></div>"+
-                                            "<div class='month_add operb'><b class='arrow aRight'>></b></div>"+
-                                            "<span class='current_month'></span>"+
-                                          "</div>"+
-                                      "</div>"+ <!--头部div层end-->
-                                      "<div class='cal_center'><table cellspacing='0'></table></div>"+
-                                      "<div class='cal_bottom'>"+ <!--底部div层start-->
-                                        "<button class='clear_date'>清空</button>"+
-                                        "<button class='today_date'>今天</button>"+
-                                        "<button class='confirm_date'>确定</button>"+
-                                      "</div>";<!--底部div层end-->
-                        return htmlContent;
-                    },
-                        //事件绑定
-                    dateEvent:function(){
-                        var $calendar = $("."+settings.className);
-                        $calendar.find(".year_add").click(function(){Calendar.yearAdd();});
-                        $calendar.find(".year_sub").click(function(){Calendar.yearSub();});
-                        $calendar.find(".month_add").click(function(){Calendar.monthAdd();});
-                        $calendar.find(".month_sub").click(function(){Calendar.monthSub();});
-                        $calendar.find(".confirm_date").click(function(){Calendar.confirm();});
-                        $calendar.find(".today_date").click(function(){Calendar.getToday();});
-                        $calendar.find(".clear_date").click(function(){Calendar.clear();});
-                    },
-                       //当前日期:年份和月份
-                    date:function(){
-                        var $calendar = $("."+settings.className);
-                        return {
-                            year:parseInt($calendar.find(".current_year").html()),
-                            month:parseInt($calendar.find(".current_month").html())
-                        };
-                    },
-                       //年份自增
-                    yearAdd:function(){
-                        Calendar.loaderDate(Calendar.date().year+1,Calendar.date().month-1);
-                    },
-                    //年份自减
-                    yearSub:function(){
-                        Calendar.loaderDate(Calendar.date().year-1,Calendar.date().month-1);
-                    },
-                    //月份自增
-                    monthAdd:function(){
-                        var year = Calendar.date().year, month = Calendar.date().month;
-                        if(month==12) {
-                            month=1;
-                            year=year+1;
-                        } else {
-                            month=month+1;
-                        }
-                        Calendar.loaderDate(year,month-1);
-                    },
-                    //月份自减
-                    monthSub:function(){
-                        var year = Calendar.date().year, month = Calendar.date().month;
-                        if(month==1) {
-                            month=12;
-                            year=year-1;
-                        } else {
-                            month=month-1;
-                        }
-                        Calendar.loaderDate(year,month-1);
-                    },
-                          //日期选择
-                    dateChoose:function($object){
-                        var year = Calendar.date().year, month = Calendar.date().month;
-                        //上一个月
-                        if($object.hasClass("pre_month_day")) {
-                            if(month == 1) {
-                                year = year-1;
-                                month = 12;
-                            } else {
-                                month = (month-1).addZero();
-                            }
-                        //当前月
-                        } else if($object.hasClass("this_month_day")) {
-                            month = month.addZero();
-                        //下一个月
-                        } else {
-                            if(month == 12) {
-                                month = "01";
-                                year = year + 1;
-                            } else {
-                                month = (month+1).addZero();
-                            }
-                        }
-                        if($object.children('span').text()!=''){
-                            current.val(year+"-"+month+"-"+$object.children('span').text());
-                        }else{
-                            current.val('');
-                        }
-                    },
-                     //确定事件
-                    confirm:function(){
-                        Calendar.destory();
-                    },
-                    //是否是闰年
-                    isLeapYear:function(year){
-                        if((year%4==0 && year%100!=0) || (year%400==0)) {
-                            return true;
-                        }
-                        return false;
-                    },
-                      //指定年份二月的天数
-                    februaryDays:function(year){
-                        if(typeof year !== "undefined" && parseInt(year) === year) {
-                            return Calendar.isLeapYear(year) ? 29:28;
-                        }
-                        return false;
-                    },
-                    getWeek:function(num){
-                        return Calendar.weeks[num];
-                    },
-                    //获取指定月份[0,11]的天数
-                    getMonthDay:function(year,month){
-                        if(month === 1){
-                            return Calendar.februaryDays(year);
-                        }
-                        month=(month===-1)?11:month;
-
-                        return Calendar.months[month];
-                    },
-                    //今天
-                    getToday:function(){
-                        var date = new Date(),
-                            year = date.getFullYear(),
-                            month = (date.getMonth()+1).addZero(),
-                            day = date.getDate().addZero();
-                        current.val(year+"-"+month+"-"+day);
-                        Calendar.destory();
-                    },
-                    //清空
-                    clear:function(){
-                        current.val("");
-                        Calendar.destory();
-                    },
-                    //关闭日历
-                    destory:function(){
-                        $("."+settings.className).empty().remove();
-                    },
-                    //初始化日历主体内容
-                    loaderDate:function(year,month){
-                        //初始化日期为当前年当前月的1号,获取1号对应的星期
-                        var oneWeek=new Date(year,month,1).getDay(),
-                            $calendar = $("."+settings.className),
-                            $calTable = $calendar.find("table"),
-                            //这个月天数
-                            thisMonthDay = Calendar.getMonthDay(year,month),
-                            //获取上一个的天数
-                            preMonthDay;
-                        //清空日期列表
-                        $calTable.html("");
-
-                        $calendar.find(".current_year").text(year+"年");
-                        $calendar.find(".current_month").text((month+1)+"月");
-                        if(oneWeek == 0) oneWeek = 7;
-
-                        if(month==0) {
-                            preMonthDay = Calendar.getMonthDay(year-1,11);
-                        } else {
-                            preMonthDay = Calendar.getMonthDay(year,month-1);
-
-                        }
-                          // console.log((preMonthDay));
-                        var start = 1, end = 1;
-                        var starT = settings.dayInfo.starttime,
-                            enD = settings.dayInfo.endtime;
-                        for(var i=0;i<7;i++) {
-                            var dayHTML = "";
-                            if(i==0) {
-                                $calTable.append("<tr class='week_head'><tr>");
-                            }
-                            for(var j=1;j<=7;j++) {
-                                //设置星期列表
-                                if(i==0) {
-                                    $calTable.find(".week_head").append("<td>"+Calendar.getWeek(j-1)+"</td>");
-                                } else {
-                                    if(settings.showOthermonth){
-                                        if((i-1)*7+j<=oneWeek) { //从第二行开始设置值
-                                            dayHTML+="<td class='pre_month_day'><span>"+(preMonthDay-oneWeek+j)+"</span></td>";
-                                        } else if((i-1)*7+j<=thisMonthDay+oneWeek ){
-                                            var result=(start++).addZero();
-                                            dayHTML+="<td class='this_month_day'><span>"+result+"</span></td>";
-                                        } else {
-                                            var result=(end++).addZero();
-                                            dayHTML +="<td class='next_month_day'><span>"+result+"</span></td>";
-                                        }
-                                    }else{
-                                         if((i-1)*7+j<=oneWeek) { //从第二行开始设置值
-                                           dayHTML+="<td><span></span></td>";
-                                        }
-                                        else if((i-1)*7+j<=thisMonthDay+oneWeek ){
-                                            var result=(start++).addZero();
-                                            // var result = i*7+j-oneWeek+1;
-                                            dayHTML+="<td class='this_month_day'><span>"+result+"</span></td>";
-                                        } else{
-                                            dayHTML+="<td><span></span></td>";
-                                        }
-                                    }
-                                }
-                            }
-                            if(i>0){
-                                $calTable.append("<tr>"+dayHTML+"</tr>");
-                            }
-                        }
-                        $calTable.find('tr[class!=week_head] td').each(function(v,k){
-                            if(starT<=new Date(year,month,$(k).text())&&enD>=new Date(year,month,$(k).text())&&$(k).text()!=''){
-                                $(k).append('<div class="tdTip">'+settings.dayInfo.price+'</div>');
-                                settings.operate("sd");
-
-                            }
-                        });
-                        Calendar.tableStyle();
-                    },
-                       //表格样式初始化
-                    tableStyle:function(){
-                        //表格中单元格的宽度
-                        var $calTable = $calendar.find("table");
-                         $calTable.find("tr[class!=week_head] td").click(function(){
-                            Calendar.dateChoose($(this));
-                        });
-                    }
-                };
-
-            return this.each(function(){
-                $target.click(function(){
-                    //触发对象,请写在点击事件中,不然会做为全局变量!
-                     current = $(this);
-                    //如果没有生成日历元素
-                    if($("."+settings.className).length == 0) {
-                        Calendar.loadCalendar();
-                    }
-                });
-                //事件触发对象
-                $(document).click(function(event){
-                    var $calendar = $("."+settings.className)
-                    if(!$target.triggerTarget(event) && !$calendar.triggerTarget(event)) {
-                        Calendar.destory();
-                    }
-                });
-            });
-        },
-           //触发事件是否是对象本身
-        triggerTarget:function(event){
-            //如果触发的是事件本身或者对象内的元素
-            return $(this).is(event.target) || $(this).has(event.target).length > 0;
-        }
-      })
-  })(jQuery);
-</script>
+<script src="./jquery.calendar.js"></script>
 <script>
 //默认皮肤
     $(".startTime").showCalendar({
